Fix spacing on overlapping 2nd line of todos

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4105,6 +4105,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.todo {
   color: #ffffff;
   padding: 5px 12px;
+  margin-top: 5px;
   font-size: 15px;
   border-radius: 6px;
   background-color: #17b05a;
